--- a/index.html
+++ b/index.html
@@ -72,35 +72,36 @@
   <script>
     let money = 200000000000;
 
-    // Items with optional maxOwned
+    // Items with accurate images and maxOwned if needed
     const items = [
-      {name: "Burger", price: 10, img: "https://cdn-icons-png.flaticon.com/512/3075/3075977.png"},
+      {name: "Soda", price: 5, img: "https://cdn-icons-png.flaticon.com/512/3129/3129683.png"},
+      {name: "Burger", price: 10, img: "https://cdn-icons-png.flaticon.com/512/1046/1046784.png"},
       {name: "Flip Flops", price: 20, img: "https://cdn-icons-png.flaticon.com/512/2922/2922510.png"},
-      {name: "Soda", price: 5, img: "https://cdn-icons-png.flaticon.com/512/590/590685.png"},
-      {name: "Tank", price: 1000000, img: "https://cdn-icons-png.flaticon.com/512/742/742818.png"},
-      {name: "Private Jet", price: 50000000, img: "https://cdn-icons-png.flaticon.com/512/2962/2962145.png"},
-      {name: "Country", price: 5000000000, img: "https://cdn-icons-png.flaticon.com/512/197/197484.png"},
-      {name: "Army", price: 10000000000, img: "https://cdn-icons-png.flaticon.com/512/263/263083.png"},
-      {name: "Gun", price: 1000, img: "https://cdn-icons-png.flaticon.com/512/3135/3135715.png"},
+      {name: "Gun", price: 1000, img: "https://cdn-icons-png.flaticon.com/512/688/688304.png"},
       {name: "Video Game", price: 60, img: "https://cdn-icons-png.flaticon.com/512/888/888879.png"},
       {name: "TV", price: 800, img: "https://cdn-icons-png.flaticon.com/512/3011/3011202.png"},
       {name: "Phone", price: 1200, img: "https://cdn-icons-png.flaticon.com/512/888/888859.png"},
       {name: "Computer", price: 2000, img: "https://cdn-icons-png.flaticon.com/512/888/888853.png"},
-
-      // Sports Teams with maxOwned
-      {name: "NFL Team", price: 3000000000, img: "https://cdn-icons-png.flaticon.com/512/888/888840.png", maxOwned: 32},
-      {name: "NBA Team", price: 2000000000, img: "https://cdn-icons-png.flaticon.com/512/888/888841.png", maxOwned: 30},
-      {name: "MLB Team", price: 1500000000, img: "https://cdn-icons-png.flaticon.com/512/888/888842.png", maxOwned: 30},
-      {name: "NHL Team", price: 1000000000, img: "https://cdn-icons-png.flaticon.com/512/888/888843.png", maxOwned: 32},
-      {name: "Soccer Team", price: 500000000, img: "https://cdn-icons-png.flaticon.com/512/888/888844.png", maxOwned: 50},
-
-      // More fun items
       {name: "Luxury Car", price: 250000, img: "https://cdn-icons-png.flaticon.com/512/743/743992.png"},
+      {name: "Diamond Ring", price: 50000, img: "https://cdn-icons-png.flaticon.com/512/2838/2838909.png"},
       {name: "Mansion", price: 7500000, img: "https://cdn-icons-png.flaticon.com/512/616/616408.png"},
       {name: "Yacht", price: 15000000, img: "https://cdn-icons-png.flaticon.com/512/3039/3039586.png"},
-      {name: "Diamond Ring", price: 50000, img: "https://cdn-icons-png.flaticon.com/512/2838/2838909.png"},
+      {name: "Private Jet", price: 50000000, img: "https://cdn-icons-png.flaticon.com/512/2962/2962145.png"},
+      {name: "Tank", price: 1000000, img: "https://cdn-icons-png.flaticon.com/512/1127/1127545.png"},
+      {name: "Army", price: 10000000000, img: "https://cdn-icons-png.flaticon.com/512/263/263083.png"},
+      {name: "Country", price: 5000000000, img: "https://cdn-icons-png.flaticon.com/512/197/197484.png"},
+
+      // Sports Teams with maxOwned
+      {name: "Soccer Team", price: 500000000, img: "https://cdn-icons-png.flaticon.com/512/888/888844.png", maxOwned: 50},
+      {name: "NHL Team", price: 1000000000, img: "https://cdn-icons-png.flaticon.com/512/888/888843.png", maxOwned: 32},
+      {name: "MLB Team", price: 1500000000, img: "https://cdn-icons-png.flaticon.com/512/888/888842.png", maxOwned: 30},
+      {name: "NBA Team", price: 2000000000, img: "https://cdn-icons-png.flaticon.com/512/888/888841.png", maxOwned: 30},
+      {name: "NFL Team", price: 3000000000, img: "https://cdn-icons-png.flaticon.com/512/888/888840.png", maxOwned: 32},
       {name: "Private Island", price: 100000000, img: "https://cdn-icons-png.flaticon.com/512/3039/3039539.png"}
     ];
+
+    // Sort items by price ascending
+    items.sort((a,b) => a.price - b.price);
 
     const container = document.getElementById('items-container');
 
@@ -138,4 +139,3 @@
   </script>
 </body>
 </html>
-
