--- a/index.html
+++ b/index.html
@@ -18,14 +18,21 @@
       padding: 20px;
       font-size: 1.8em;
     }
-    h2 {
+    h2, h3 {
       margin-top: 20px;
-      font-size: 1.5em;
     }
     .money {
       font-size: 2em;
       margin: 20px 0;
       color: green;
+    }
+    .category {
+      margin-bottom: 30px;
+    }
+    .category h3 {
+      background: #ddd;
+      padding: 10px;
+      border-radius: 8px;
     }
     .items {
       display: flex;
@@ -67,60 +74,91 @@
   <h2>Jeff Bezos' Net Worth:</h2>
   <div class="money" id="money">$200,000,000,000</div>
 
-  <div class="items" id="items-container"></div>
+  <div id="categories-container"></div>
 
   <script>
     let money = 200000000000;
 
-    // Items with accurate images and maxOwned if needed
-    const items = [
-      {name: "Soda", price: 5, img: "https://cdn-icons-png.flaticon.com/512/3129/3129683.png"},
-      {name: "Burger", price: 10, img: "https://cdn-icons-png.flaticon.com/512/1046/1046784.png"},
-      {name: "Flip Flops", price: 20, img: "https://cdn-icons-png.flaticon.com/512/2922/2922510.png"},
-      {name: "Gun", price: 1000, img: "https://cdn-icons-png.flaticon.com/512/688/688304.png"},
-      {name: "Video Game", price: 60, img: "https://cdn-icons-png.flaticon.com/512/888/888879.png"},
-      {name: "TV", price: 800, img: "https://cdn-icons-png.flaticon.com/512/3011/3011202.png"},
-      {name: "Phone", price: 1200, img: "https://cdn-icons-png.flaticon.com/512/888/888859.png"},
-      {name: "Computer", price: 2000, img: "https://cdn-icons-png.flaticon.com/512/888/888853.png"},
-      {name: "Luxury Car", price: 250000, img: "https://cdn-icons-png.flaticon.com/512/743/743992.png"},
-      {name: "Diamond Ring", price: 50000, img: "https://cdn-icons-png.flaticon.com/512/2838/2838909.png"},
-      {name: "Mansion", price: 7500000, img: "https://cdn-icons-png.flaticon.com/512/616/616408.png"},
-      {name: "Yacht", price: 15000000, img: "https://cdn-icons-png.flaticon.com/512/3039/3039586.png"},
-      {name: "Private Jet", price: 50000000, img: "https://cdn-icons-png.flaticon.com/512/2962/2962145.png"},
-      {name: "Tank", price: 1000000, img: "https://cdn-icons-png.flaticon.com/512/1127/1127545.png"},
-      {name: "Army", price: 10000000000, img: "https://cdn-icons-png.flaticon.com/512/263/263083.png"},
-      {name: "Country", price: 5000000000, img: "https://cdn-icons-png.flaticon.com/512/197/197484.png"},
-
-      // Sports Teams with maxOwned
-      {name: "Soccer Team", price: 500000000, img: "https://cdn-icons-png.flaticon.com/512/888/888844.png", maxOwned: 50},
-      {name: "NHL Team", price: 1000000000, img: "https://cdn-icons-png.flaticon.com/512/888/888843.png", maxOwned: 32},
-      {name: "MLB Team", price: 1500000000, img: "https://cdn-icons-png.flaticon.com/512/888/888842.png", maxOwned: 30},
-      {name: "NBA Team", price: 2000000000, img: "https://cdn-icons-png.flaticon.com/512/888/888841.png", maxOwned: 30},
-      {name: "NFL Team", price: 3000000000, img: "https://cdn-icons-png.flaticon.com/512/888/888840.png", maxOwned: 32},
-      {name: "Private Island", price: 100000000, img: "https://cdn-icons-png.flaticon.com/512/3039/3039539.png"}
+    // Items grouped by category
+    const categories = [
+      {
+        name: "Food & Drinks",
+        items: [
+          {name: "Soda", price: 5, img: "https://cdn-icons-png.flaticon.com/512/3129/3129683.png"},
+          {name: "Burger", price: 10, img: "https://cdn-icons-png.flaticon.com/512/1046/1046784.png"},
+          {name: "Flip Flops", price: 20, img: "https://cdn-icons-png.flaticon.com/512/2922/2922510.png"}
+        ]
+      },
+      {
+        name: "Electronics",
+        items: [
+          {name: "Video Game", price: 60, img: "https://cdn-icons-png.flaticon.com/512/888/888879.png"},
+          {name: "TV", price: 800, img: "https://cdn-icons-png.flaticon.com/512/3011/3011202.png"},
+          {name: "Phone", price: 1200, img: "https://cdn-icons-png.flaticon.com/512/888/888859.png"},
+          {name: "Computer", price: 2000, img: "https://cdn-icons-png.flaticon.com/512/888/888853.png"}
+        ]
+      },
+      {
+        name: "Luxury Items",
+        items: [
+          {name: "Diamond Ring", price: 50000, img: "https://cdn-icons-png.flaticon.com/512/2838/2838909.png"},
+          {name: "Luxury Car", price: 250000, img: "https://cdn-icons-png.flaticon.com/512/743/743992.png"},
+          {name: "Mansion", price: 7500000, img: "https://cdn-icons-png.flaticon.com/512/616/616408.png"},
+          {name: "Yacht", price: 15000000, img: "https://cdn-icons-png.flaticon.com/512/3039/3039586.png"},
+          {name: "Private Jet", price: 50000000, img: "https://cdn-icons-png.flaticon.com/512/2962/2962145.png"},
+          {name: "Private Island", price: 100000000, img: "https://cdn-icons-png.flaticon.com/512/3039/3039539.png"}
+        ]
+      },
+      {
+        name: "Military & Armies",
+        items: [
+          {name: "Gun", price: 1000, img: "https://cdn-icons-png.flaticon.com/512/688/688304.png"},
+          {name: "Tank", price: 1000000, img: "https://cdn-icons-png.flaticon.com/512/1127/1127545.png"},
+          {name: "Army", price: 10000000000, img: "https://cdn-icons-png.flaticon.com/512/263/263083.png"}
+        ]
+      },
+      {
+        name: "Countries & Sports Teams",
+        items: [
+          {name: "Country", price: 5000000000, img: "https://cdn-icons-png.flaticon.com/512/197/197484.png"},
+          {name: "Soccer Team", price: 500000000, img: "https://cdn-icons-png.flaticon.com/512/888/888844.png", maxOwned: 50},
+          {name: "NHL Team", price: 1000000000, img: "https://cdn-icons-png.flaticon.com/512/888/888843.png", maxOwned: 32},
+          {name: "MLB Team", price: 1500000000, img: "https://cdn-icons-png.flaticon.com/512/888/888842.png", maxOwned: 30},
+          {name: "NBA Team", price: 2000000000, img: "https://cdn-icons-png.flaticon.com/512/888/888841.png", maxOwned: 30},
+          {name: "NFL Team", price: 3000000000, img: "https://cdn-icons-png.flaticon.com/512/888/888840.png", maxOwned: 32}
+        ]
+      }
     ];
 
-    // Sort items by price ascending
-    items.sort((a,b) => a.price - b.price);
+    const categoriesContainer = document.getElementById('categories-container');
 
-    const container = document.getElementById('items-container');
+    // Create category sections sorted by item price
+    categories.forEach(category => {
+      category.items.sort((a,b) => a.price - b.price);
 
-    // Create item elements
-    items.forEach((item, index) => {
-      const div = document.createElement('div');
-      div.className = 'item';
-      div.innerHTML = `
-        <img src="${item.img}" alt="${item.name}" />
-        <h3>${item.name} - $${item.price.toLocaleString()}</h3>
-        <button onclick="buyItem(${index})">Buy</button>
-        <p>Owned: <span id="owned-${index}">0</span></p>
-      `;
-      container.appendChild(div);
+      const catDiv = document.createElement('div');
+      catDiv.className = 'category';
+      catDiv.innerHTML = `<h3>${category.name}</h3><div class="items" id="cat-${category.name}"></div>`;
+      categoriesContainer.appendChild(catDiv);
+
+      const container = document.getElementById(`cat-${category.name}`);
+      category.items.forEach((item, index) => {
+        const div = document.createElement('div');
+        div.className = 'item';
+        div.innerHTML = `
+          <img src="${item.img}" alt="${item.name}" />
+          <h3>${item.name} - $${item.price.toLocaleString()}</h3>
+          <button onclick="buyItem('${category.name}', ${index})">Buy</button>
+          <p>Owned: <span id="owned-${category.name}-${index}">0</span></p>
+        `;
+        container.appendChild(div);
+      });
     });
 
-    function buyItem(index) {
-      const item = items[index];
-      const ownedEl = document.getElementById(`owned-${index}`);
+    function buyItem(categoryName, index) {
+      const category = categories.find(c => c.name === categoryName);
+      const item = category.items[index];
+      const ownedEl = document.getElementById(`owned-${categoryName}-${index}`);
       let owned = parseInt(ownedEl.innerText);
 
       if (item.maxOwned && owned >= item.maxOwned) {
