Change gun icon image in index.html
Updated the gun icon image URL in the Military & Armies section.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       {
         name: "Military & Armies",
         items: [
-          {name: "Gun", price: 1000, img: "https://cdn-icons-png.flaticon.com/128/446/446075.png"}, // new gun icon
+         {name: "Gun", price: 1000, img: "https://cdn-icons-png.flaticon.com/128/3081/3081941.png"},
           {name: "Tank", price: 1000000, img: "https://cdn-icons-png.flaticon.com/128/265/265841.png"}, // new tank icon
           {name: "Army", price: 10000000000, img: "https://cdn-icons-png.flaticon.com/128/6029/6029728.png"}
         ]
