--- a/index.html
+++ b/index.html
@@ -35,10 +35,21 @@
         items: [
           {name: "Soda", price: 2, img: "https://cdn-icons-png.flaticon.com/128/2405/2405479.png"},
           {name: "Burger", price: 5, img: "https://cdn-icons-png.flaticon.com/512/1046/1046784.png"},
-          {name: "Flip Flops", price: 10, img: "https://cdn-icons-png.flaticon.com/128/1023/1023229.png"},
           {name: "Giant Chocolate Bar", price: 50, img: "https://cdn-icons-png.flaticon.com/128/2913/2913464.png"},
           {name: "Golden Ice Cream Cone", price: 500, img: "https://cdn-icons-png.flaticon.com/128/616/616408.png"},
-          {name: "Private Pizza", price: 1000, img: "https://cdn-icons-png.flaticon.com/128/2913/2913441.png"}
+          {name: "Private Pizza", price: 1000, img: "https://cdn-icons-png.flaticon.com/128/2913/2913441.png"},
+          {name: "Luxury Steak", price: 200, img: "https://cdn-icons-png.flaticon.com/128/2922/2922510.png"},
+          {name: "Caviar Plate", price: 5000, img: "https://cdn-icons-png.flaticon.com/128/2976/2976096.png"},
+          {name: "Gold-Encrusted Cake", price: 10000, img: "https://cdn-icons-png.flaticon.com/128/2913/2913448.png"}
+        ]
+      },
+      {
+        name: "Clothing",
+        items: [
+          {name: "Flip Flops", price: 10, img: "https://cdn-icons-png.flaticon.com/128/1023/1023229.png"},
+          {name: "Designer Hat", price: 200, img: "https://cdn-icons-png.flaticon.com/128/2913/2913445.png"},
+          {name: "Luxury Jacket", price: 5000, img: "https://cdn-icons-png.flaticon.com/128/2913/2913446.png"},
+          {name: "Diamond Shoes", price: 100000, img: "https://cdn-icons-png.flaticon.com/128/2913/2913447.png"}
         ]
       },
       {
