--- a/index.html
+++ b/index.html
@@ -30,30 +30,29 @@
     let money = 200000000000;
 
     const categories = [
-   {
-  name: "Food & Drinks",
-  items: [
-    {name: "Soda", price: 2, img: "https://cdn-icons-png.flaticon.com/128/2405/2405479.png"},
-    {name: "Burger", price: 5, img: "https://cdn-icons-png.flaticon.com/512/1046/1046784.png"},
-    {name: "Hot Dog", price: 3, img: "https://cdn-icons-png.flaticon.com/128/1046/1046788.png"},
-    {name: "Pickles", price: 2, img: "https://cdn-icons-png.flaticon.com/128/3023/3023343.png"},
-    {name: "Lobster", price: 50, img: "https://cdn-icons-png.flaticon.com/128/616/616408.png"},
-    {name: "Bread", price: 2, img: "https://cdn-icons-png.flaticon.com/128/1046/1046785.png"},
-    {name: "Eggs", price: 3, img: "https://cdn-icons-png.flaticon.com/128/1046/1046790.png"},
-    {name: "French Fries", price: 4, img: "https://cdn-icons-png.flaticon.com/128/1046/1046786.png"},
-    {name: "Salmon", price: 25, img: "https://cdn-icons-png.flaticon.com/128/616/616415.png"},
-    {name: "Gried Cheese", price: 15, img: "https://cdn-icons-png.flaticon.com/128/616/616420.png"},
-    {name: "Pasta", price: 10, img: "https://cdn-icons-png.flaticon.com/128/1046/1046787.png"},
-    {name: "Ribeye Steak", price: 40, img: "https://cdn-icons-png.flaticon.com/128/1046/1046789.png"},
-    {name: "Giant Chocolate Bar", price: 50, img: "https://cdn-icons-png.flaticon.com/128/2913/2913464.png"},
-    {name: "Golden Ice Cream Cone", price: 500, img: "https://cdn-icons-png.flaticon.com/128/616/616408.png"},
-    {name: "Private Pizza", price: 1000, img: "https://cdn-icons-png.flaticon.com/128/2913/2913441.png"},
-    {name: "Luxury Steak", price: 200, img: "https://cdn-icons-png.flaticon.com/128/2922/2922510.png"},
-    {name: "Caviar Plate", price: 5000, img: "https://cdn-icons-png.flaticon.com/128/2976/2976096.png"},
-    {name: "Gold-Encrusted Cake", price: 10000, img: "https://cdn-icons-png.flaticon.com/128/2913/2913448.png"}
-      ]
-      }
-
+      {
+        name: "Food & Drinks",
+        items: [
+          {name: "Soda", price: 2, img: "https://cdn-icons-png.flaticon.com/128/2405/2405479.png"},
+          {name: "Burger", price: 5, img: "https://cdn-icons-png.flaticon.com/512/1046/1046784.png"},
+          {name: "Hot Dog", price: 3, img: "https://cdn-icons-png.flaticon.com/128/1046/1046788.png"},
+          {name: "Pickles", price: 2, img: "https://cdn-icons-png.flaticon.com/128/3023/3023343.png"},
+          {name: "Lobster", price: 50, img: "https://cdn-icons-png.flaticon.com/128/616/616408.png"},
+          {name: "Bread", price: 2, img: "https://cdn-icons-png.flaticon.com/128/1046/1046785.png"},
+          {name: "Eggs", price: 3, img: "https://cdn-icons-png.flaticon.com/128/1046/1046790.png"},
+          {name: "French Fries", price: 4, img: "https://cdn-icons-png.flaticon.com/128/1046/1046786.png"},
+          {name: "Salmon", price: 25, img: "https://cdn-icons-png.flaticon.com/128/616/616415.png"},
+          {name: "Gried Cheese", price: 15, img: "https://cdn-icons-png.flaticon.com/128/616/616420.png"},
+          {name: "Pasta", price: 10, img: "https://cdn-icons-png.flaticon.com/128/1046/1046787.png"},
+          {name: "Ribeye Steak", price: 40, img: "https://cdn-icons-png.flaticon.com/128/1046/1046789.png"},
+          {name: "Giant Chocolate Bar", price: 50, img: "https://cdn-icons-png.flaticon.com/128/2913/2913464.png"},
+          {name: "Golden Ice Cream Cone", price: 500, img: "https://cdn-icons-png.flaticon.com/128/616/616408.png"},
+          {name: "Private Pizza", price: 1000, img: "https://cdn-icons-png.flaticon.com/128/2913/2913441.png"},
+          {name: "Luxury Steak", price: 200, img: "https://cdn-icons-png.flaticon.com/128/2922/2922510.png"},
+          {name: "Caviar Plate", price: 5000, img: "https://cdn-icons-png.flaticon.com/128/2976/2976096.png"},
+          {name: "Gold-Encrusted Cake", price: 10000, img: "https://cdn-icons-png.flaticon.com/128/2913/2913448.png"}
+        ]
+      },
       {
         name: "Clothing",
         items: [
@@ -127,42 +126,4 @@
 
       const catDiv = document.createElement('div');
       catDiv.className = 'category';
-      catDiv.innerHTML = `<h3>${category.name}</h3><div class="items" id="cat-${category.name}"></div>`;
-      categoriesContainer.appendChild(catDiv);
-
-      const container = document.getElementById(`cat-${category.name}`);
-      category.items.forEach((item, index) => {
-        const div = document.createElement('div');
-        div.className = 'item';
-        div.innerHTML = `
-          <img src="${item.img}" alt="${item.name}" />
-          <h3>${item.name} - $${item.price.toLocaleString()}</h3>
-          <button onclick="buyItem('${category.name}', ${index})">Buy</button>
-          <p>Owned: <span id="owned-${category.name}-${index}">0</span></p>
-        `;
-        container.appendChild(div);
-      });
-    });
-
-    function buyItem(categoryName, index) {
-      const category = categories.find(c => c.name === categoryName);
-      const item = category.items[index];
-      const ownedEl = document.getElementById(`owned-${categoryName}-${index}`);
-      let owned = parseInt(ownedEl.innerText);
-
-      if (item.maxOwned && owned >= item.maxOwned) {
-        alert(`You can only own ${item.maxOwned} ${item.name}${item.maxOwned>1?"s":""}!`);
-        return;
-      }
-
-      if (money >= item.price) {
-        money -= item.price;
-        document.getElementById('money').innerText = '$' + money.toLocaleString();
-        ownedEl.innerText = owned + 1;
-      } else {
-        alert("You're out of money!");
-      }
-    }
-  </script>
-</body>
-</html>
+      catDiv.in
